syntax = "proto3";

package session;
import public "login.proto";
import public "logout.proto";
import public "signup.proto";

enum Status {
    ALIVE = 0;
    OLD = 1;
    DEAD = 2;
    NEW = 3;
}

message SessionResponse {
  string cookie = 1;  
  int64 deadline = 2;
  Status status = 3;
}

service Session {
  rpc Login(LoginRequest) returns (SessionResponse);
  rpc GoogleLogin(GoogleLoginRequest) returns (SessionResponse);
  rpc Logout(LogoutRequest) returns (SessionResponse);
  rpc Signup(SignupRequest) returns (SessionResponse);
}